# -lengrvis

./: .env.example  README.md  Start-Mavris-Debug.cmd  Start-Mavris.cmd  config.example.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  context_compaction.py  context_management.py  context_usage.py  main.py
backend/app/agents/: computer_agent.py  orchestrator_agent.py
backend/app/api/: routes_approvals.py  routes_chat.py  routes_context.py  routes_mobile.py  routes_pair.py  routes_pairing.py  routes_prompts.py  routes_remote.py  routes_schedules.py  routes_settings.py
backend/app/commands/: registry.py  service.py
backend/app/core/: db.py  schemas.py  session_context.py
backend/app/integrations/: __init__.py  claude_code.py
backend/app/llm/: openai_compatible.py  registry.py  usage.py
backend/app/policy/: privacy.py  (+1 more)
backend/tests/: test_app_skill_protocol.py  test_approval_binding.py  test_claude_code_config.py  test_claude_code_runner.py  test_commands_api.py  test_context_compaction.py  test_context_management.py  test_context_usage.py  test_developer_tools.py  test_execution_engines.py  test_lan_api_guard.py  test_llm_profiles_usage.py  test_llm_settings_api.py  test_local_provider_fallback.py  test_mobile_pairing.py  test_mode_routing.py  test_notification_service.py  test_openai_compatible_resilience.py  test_prompt_loader.py  test_prompt_reload.py  test_remote_desktop.py  test_runs_api.py  test_runtime_safety_supervision.py  test_session_context.py  test_task_recordings.py  test_tool_runtime.py  test_websocket_stream.py
(+46 files in other folders)
