[project]
name = "marvis-agent-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "PyJWT>=2.10",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "psutil>=6.0",
  "send2trash>=1.8",
  "pywin32>=306; platform_system == 'Windows'"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
